--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,8 +13,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Build with Xcode
-      run: xcodebuild -project ToDoApp_Demo.xcodeproj -scheme YourAppScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' build || exit 1
+   - name: Build with Xcode
+  run: xcodebuild -project "ToDoApp Demo.xcodeproj" -scheme YourAppScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' build || exit 1
 
-    - name: Run tests
-      run: xcodebuild -project ToDoApp_Demo.xcodeproj -scheme YourAppScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' test || exit 1
+- name: Run tests
+  run: xcodebuild -project "ToDoApp Demo.xcodeproj" -scheme YourAppScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' test || exit 1
