--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -13,6 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Print working directory
+        run: pwd
+
+      - name: List files
+        run: ls -l
+
       - name: Build with Xcode
         run: xcodebuild -project "ToDoApp Demo.xcodeproj" -scheme YourAppScheme -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 14,OS=latest' build || exit 1
 
